fatal issue checking

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/yFjsHZz/hot-dog-food-and-restaurant-svgrepo-com.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chef'sTable</title>
+    <title>Chef's_Table</title>
   </head>
   <body>
     <div id="root"></div>
